crates/fluvio-connector-common/ui-test/ui/wrong_input_len.stderr
error: Connector function must have two input arguments
 --> ui-test/ui/wrong_input_len.rs:4:1
  |
4 | async fn start_fn() {}
  | ^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> ui-test/ui/wrong_input_len.rs:4:23
  |
4 | async fn start_fn() {}
  |                       ^ consider adding a `main` function to `$DIR/ui-test/ui/wrong_input_len.rs`
